--- a/sparePartsStore/sparePartsStore.csproj
+++ b/sparePartsStore/sparePartsStore.csproj
@@ -10,8 +10,25 @@
 
   <ItemGroup>
     <Folder Include="Model\" />
+    <Folder Include="Helper\" />
     <Folder Include="ViewModel\" />
-    <Folder Include="View\" />
+    <Folder Include="View\ViewAdministrator\ViewWorkingWithData\" />
+    <Folder Include="View\ViewAuthorization\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MaterialDesignColors" Version="3.0.0" />
+    <PackageReference Include="MaterialDesignThemes" Version="5.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
